--- a/Understanding-TS-first-project/tsconfig.json
+++ b/Understanding-TS-first-project/tsconfig.json
@@ -99,6 +99,6 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  },
-  "exclude": ["analytics.ts"]
+  }
+  //  "exclude": ["**/*./dev.ts", "node_modules/"]
 }
